--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ jwt.secret=usoftcmd
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 server.port=8687
-app.file.storage.mapping=file:///D:/Electronics_Market/static/upload
+app.file.storage.mapping=file:///G:/electron-store-backend/static/upload
 
 
 
