--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ jwt.secret=usoftcmd
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 server.port=8687
+firebase.config.path=classpath:cho-dien-may-firebase-adminsdk-2st8p-d4c84b00ce.json
