--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.servlet.multipart.max-request-size=2MB
 server.port=8687
 google.app.id=463449544023-nhfr52q0kg2320jjgnecbf8ncphqj8dh.apps.googleusercontent.com
 google.app.secret=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
-#google.redirect.uri=http://chodienmay.vn/login-google
-google.redirect.uri=http://localhost:8687/api/v1/user/login-google
+google.redirect.uri=http://api.chodienmay.vn/api/v1/user/login-google
+#google.redirect.uri=http://localhost:8687/api/v1/user/login-google
 google.link.get.token=https://accounts.google.com/o/oauth2/token
 google.link.get.user_info=https://www.googleapis.com/oauth2/v1/userinfo?access_token=
