--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,12 @@ spring.servlet.multipart.max-request-size=2MB
 server.port=8687
 google.link.get.user_info=https://www.googleapis.com/oauth2/v1/userinfo?access_token=
 firebase.config.path=classpath:cho-dien-may-firebase-adminsdk-2st8p-d4c84b00ce.json
-spring.mail.host=smtp.mail.nextsol.vn
-spring.mail.port=587
+spring.mail.host=hl-mail13.viettelidc.com.vn
+spring.mail.port=465
 spring.mail.username=noreply@nextsol.vn
 spring.mail.password=Usoft@1234
+spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
